FIX Button alignment tweaks

--- a/client/src/containers/AssetAdmin/AssetAdmin.scss
+++ b/client/src/containers/AssetAdmin/AssetAdmin.scss
@@ -2,5 +2,8 @@
 
 .asset-admin__toolbar-extra {
   width: auto;
-}
 
+  button:last-of-type {
+    margin-right: -10px;
+  }
+}
